RESOLVED FIXED51623
REGRESSION (r73337): Incorrect text match count when a match occurs in a text field
https://bugs.webkit.org/show_bug.cgi?id=51623
Summary REGRESSION (r73337): Incorrect text match count when a match occurs in a text...
mitz
Reported 2010-12-26 13:14:57 PST
REGRESSION (r73337): Incorrect text match count when a match occurs in a text field
Attachments
Patch (2.18 KB, patch)
2010-12-26 13:29 PST, mitz
sam: review+
mitz
Comment 1 2010-12-26 13:29:13 PST
Eric Seidel (no email)
Comment 2 2010-12-26 13:31:26 PST
Comment on attachment 77462 [details] Patch How do we test this?
mitz
Comment 3 2010-12-26 16:56:39 PST
Sam Weinig
Comment 4 2010-12-26 17:20:58 PST
Comment on attachment 77462 [details] Patch Can we test this?
mitz
Comment 5 2011-01-02 20:46:54 PST
Fixed and added a manual test in <http://trac.webkit.org/changeset/74886>.
WebKit Review Bot
Comment 6 2011-01-02 21:34:26 PST
http://trac.webkit.org/changeset/74886 might have broken Leopard Intel Debug (Tests)
Note You need to log in before you can comment on or make changes to this bug.