<rdar://problem/8806570> REGRESSION (r73337): Incorrect text match count when a match occurs in a text field https://bugs.webkit.org/show_bug.cgi?id=51623

Reviewed by Sam Weinig.

* editing/Editor.cpp:
(WebCore::Editor::countMatchesForText): Actually remember the original search range end
container and offset and restore them when needed, instead of using two references to the
same Range.
* manual-tests/find-count-matches-after-text-control.html: Added.



Canonical link: https://commits.webkit.org/65225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74886 268f45cc-cd09-0410-ab3c-d52691b4dbfc